# programming_4

./: .env  .gitmodules  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
assets/: main.css
migrations/2025-12-23-061928-0000_create_messages/: up.sql
migrations/create_initial/: down.sql  up.sql
src/: arc_mutex_signal.rs  lib.rs  main.rs  message_repository.rs  models.rs  o4_chat_client.rs  packet.rs  packet_builder.rs  poc_repo.rs  repository.rs  route.rs  schema.rs  sqlite_repository.rs  tcp_chat_client.rs
src/components/: button.rs  channel_button.rs  create_channel_button.rs  input_field.rs  message_box.rs  message_history.rs  mod.rs  notification.rs  popup.rs  timer.rs  topic_editor.rs  user_panel.rs
src/components/routes/: home.rs  login.rs  mod.rs  test_route.rs
src/components/tooltip/: style.css
