[package]
name = "neighbor_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.0" }
dioxus-desktop = { version = "0.7.2" }
dioxus-stores = "0.7.2"
directories = "6.0.0"
num = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.145"
serde_tran = "1.1.0"
smol = "2.0.2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.48.0", features = ["net"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"] # This feature is enabled during desktop builds
